Rename book to 'The Invisible Pattern' and standardize export filenames to 'manuscript_vX'

--- a/scripts/book_style.css
+++ b/scripts/book_style.css
@@ -23,7 +23,7 @@
     margin-left: 1in;
     margin-right: 0.6in;
     @top-left {
-        content: "The Unified Selection Framework";
+        content: "The Invisible Pattern";
         font-family: "Helvetica", sans-serif;
         font-size: 8pt;
         text-transform: uppercase;
